fix: reset css의 overflow 속성으로 인해 잘못 추가된 속성 개선

--- a/theme02/wp-content/themes/refactor/assets/scss/components/_post-card.scss
+++ b/theme02/wp-content/themes/refactor/assets/scss/components/_post-card.scss
@@ -122,13 +122,11 @@
 
     a {
       display: block;
-      overflow: hidden;
     }
 
     img {
       width: 100%;
       min-height: rem-calc(150);
-      // height: 100%;
       object-fit: cover;
       object-position: top center;
     }
@@ -273,7 +271,6 @@
 
     a {
       display: block;
-      overflow: hidden;
 
       img {
         width: 100%;
